test/fails/bad_parsing/bad_declare1.lgl
declare int declare();

void main() {
    return;
}